<resources>
    <string name="app_name">Schools Post Network</string>
    <string name="miguel_angel_avila_mercado">Miguel Angel Avila Mercado</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="registrate">Registrate</string>
    <string name="edad">Edad</string>
    <string name="telefono">Telefono</string>
    <string name="direccion">Direccion</string>
    <string name="nombres">Nombres Completos</string>
    <string name="apellidoss">Apellidos Completos</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <!--DIALOGO DE NO INICIO SESION-->
    <string name="nosesion">No pudo Iniciar sesion, intente nuevamente (Revisa tu correo o contraseña) - Verifica tu conexion a wifi</string>
    <string name="ok_no_sesion">ENTENDIDO</string>

    <!--PERFIL-->
    <string name="uidtxt">Uid: </string>
    <string name="uidPerfil"> -- </string>
    <string name="correotxt">Correo: </string>
    <string name="correoPerfil"> -- </string>
    <string name="nombrestxt">Nombres: </string>
    <string name="nombresPerfil"> -- </string>

    <!--MENU-->
    <string name="MisDatosOpcion">Mis Datos</string>
    <string name="CrearPostOpcion">Crear Post</string>
    <string name="FeedOpciones">Feed</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>

</resources>