<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".IniciarSesionActivity"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="700dp"
            android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="252dp"
        android:layout_height="218dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        app:srcCompat="@drawable/logoapp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-40dp"
        android:fontFamily="@font/hola"
        android:text="  manage inventory"
        android:textColor="@color/white"
        android:textSize="24dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/EmailEditText"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-65dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_account_user"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#fff"
        android:textColorHint="#ffff"
        android:textSize="16sp"
        tools:ignore="TouchTargetSizeCheck"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/PasswordEditText"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/EmailEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="-50dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/ic_password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:password="true"
        android:textColor="#fff"
        android:textColorHint="#ffff"
        tools:ignore="TouchTargetSizeCheck"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/iniciar_sesion"
        android:layout_width="220dp"
        android:layout_height="57dp"
        android:layout_alignBottom="@+id/PasswordEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-90dp"
        android:text="@string/iniciar_sesion"
        android:textColor="#FFFF"
        android:textSize="20sp" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>