<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".RegistrarActivity"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="700dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="252dp"
                android:layout_height="218dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                app:srcCompat="@drawable/logoapp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imageView3"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="-40dp"
                android:fontFamily="@font/hola"
                android:text="Registrate"
                android:textColor="@color/white"
                android:textSize="24dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/Email"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_alignBottom="@+id/textView"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="-65dp"
                android:background="#11000000"
                android:drawableLeft="@drawable/ic_account_user"
                android:ems="10"
                android:hint="Email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textColor="#fff"
                android:textColorHint="#ffff"
                android:textSize="16dp"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/Password"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_alignBottom="@+id/Email"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="22dp"
                android:layout_marginBottom="-50dp"
                android:background="#11000000"
                android:drawableLeft="@drawable/ic_password"
                android:ems="10"
                android:hint="Password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColor="#fff"
                android:textColorHint="#ffff"
                android:textSize="16dp"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/Nombres"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_alignBottom="@+id/Password"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="22dp"
                android:layout_marginBottom="-50dp"
                android:background="#11000000"
                android:drawableLeft="@drawable/ic_baseline_alternate_email_24"
                android:ems="10"
                android:hint="@string/nombres"
                android:importantForAutofill="no"
                android:inputType="textCapWords|textAutoCorrect"
                android:textColor="#fff"
                android:textColorHint="#ffff"
                android:textSize="16dp"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/Apellidos"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_alignBottom="@+id/Nombres"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="22dp"
                android:layout_marginBottom="-50dp"
                android:background="#11000000"
                android:drawableLeft="@drawable/ic_baseline_alternate_email_24"
                android:ems="10"
                android:hint="@string/apellidoss"
                android:importantForAutofill="no"
                android:inputType="textCapWords|textAutoCorrect"
                android:textColor="#fff"
                android:textColorHint="#ffff"
                android:textSize="16dp"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/Edad"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_alignBottom="@+id/Apellidos"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="22dp"
                android:layout_marginBottom="-50dp"
                android:background="#11000000"
                android:drawableStart="@drawable/ic_baseline_boy_24"
                android:ems="10"
                android:hint="@string/edad"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="#fff"
                android:textColorHint="#ffff"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/Telefono"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_alignBottom="@+id/Edad"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="22dp"
                android:layout_marginBottom="-50dp"
                android:background="#11000000"
                android:drawableStart="@drawable/ic_baseline_phone_24"
                android:ems="10"
                android:hint="@string/telefono"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="#fff"
                android:textColorHint="#ffff"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/Direccion"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_alignBottom="@+id/Telefono"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="22dp"
                android:layout_marginBottom="-50dp"
                android:background="#11000000"
                android:drawableStart="@drawable/ic_baseline_directions_24"
                android:ems="10"
                android:hint="@string/direccion"
                android:importantForAutofill="no"
                android:inputType="textCapWords|textAutoCorrect"
                android:textColor="#fff"
                android:textColorHint="#ffff"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/registrar_usuarios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="230dp"
                android:backgroundTint="@color/purple_500"
                android:text="@string/registrate"
                android:textColor="@color/white" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>